recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:6: error: not found: value lenght
    return spiral(steps-1,angle,lenght+3,increment);
                                ^